[gd_scene load_steps=18 format=2]

[ext_resource path="res://Monsters/DetectionZone.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hitboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Monsters/SoftCollision.tscn" type="PackedScene" id=3]
[ext_resource path="res://Monsters/WanderingController.tscn" type="PackedScene" id=4]
[ext_resource path="res://Stats.tscn" type="PackedScene" id=5]
[ext_resource path="res://Hitboxes/Hitbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Monsters/SodabottleSprite.png" type="Texture" id=7]
[ext_resource path="res://Monsters/Sodaz.gd" type="Script" id=8]

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 50, 65 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 50, 0, 50, 65 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 100, 0, 50, 65 )

[sub_resource type="SpriteFrames" id=13]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 7.0
height = 4.0

[sub_resource type="CapsuleShape2D" id=6]
radius = 18.0
height = 0.0

[sub_resource type="CircleShape2D" id=7]
radius = 100.08

[sub_resource type="CircleShape2D" id=8]
radius = 15.0333

[sub_resource type="CapsuleShape2D" id=9]
radius = 7.0
height = 2.0

[node name="Sodaz" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 8 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 13 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 6 )

[node name="Stats" parent="." instance=ExtResource( 5 )]
max_hp = 7.0
mon_dmg = 1

[node name="DectectionZone" parent="." instance=ExtResource( 1 )]

[node name="CollisionShape2D" parent="DectectionZone" index="0"]
modulate = Color( 0.266667, 0.980392, 0.258824, 0.588235 )
shape = SubResource( 7 )

[node name="Hitbox" parent="." instance=ExtResource( 6 )]
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( 0, -1 )
shape = SubResource( 8 )

[node name="SoftCollision" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="SoftCollision" index="0"]
shape = SubResource( 9 )

[node name="WanderingController" parent="." instance=ExtResource( 4 )]

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="dead" from="Stats" to="." method="_on_Stats_dead"]

[editable path="Hurtbox"]
[editable path="DectectionZone"]
[editable path="Hitbox"]
[editable path="SoftCollision"]
